--- a/app/src/main/res/layout/activity_ubah.xml
+++ b/app/src/main/res/layout/activity_ubah.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="6dp"
+    android:background="@drawable/fotobola"
     tools:context=".UbahActivity">
 
     <TextView
@@ -22,23 +23,31 @@
     <EditText
         android:id="@+id/et_nama"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="Nama Player"
-        android:textSize="21sp"/>
+        android:textSize="21sp"
+        android:background="@color/white"
+        android:padding="6dp"
+        android:layout_marginBottom="10dp"/>
 
     <EditText
         android:id="@+id/et_nomor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="Nomor Punggung"
-        android:textSize="21sp"/>
+        android:textSize="21sp"
+        android:background="@color/white"
+        android:padding="6dp"
+        android:layout_marginBottom="10dp"/>
 
     <EditText
         android:id="@+id/et_klub"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="Klub"
-        android:textSize="21sp"/>
+        android:textSize="21sp"
+        android:background="@color/white"
+        android:padding="6dp"/>
 
     <Button
         android:id="@+id/btn_ubah"
